# Fire-Wallet-CLI

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE_FIRECHAIN.md  Cargo.toml  LICENSE  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  bug_report.yml  diretorios.txt  feature_request.yml
.github/workflows/: rust.yml  slsa.yml
src/: address.rs  cli.rs  error.rs  lib.rs  main.rs  multisig.rs  secure.rs  signing.rs  wallet.rs
src/cli/: derive.rs  export.rs  format.rs  handler.rs  mod.rs  parser.rs  recover.rs
src/commands/: derive.rs  export.rs  import.rs  json_api.rs  mnemonic.rs  mod.rs  multisig.rs  new.rs  recover.rs  sign.rs  verify.rs
src/core/: address.rs  crypto.rs  mod.rs  wallet.rs
src/utils/: address.rs  format.rs  fs.rs  mod.rs
src/utils/crypto/: aes.rs  mod.rs
tests/: address_formats.rs  cli_generate.rs  cli_tests.rs  derive_tests.rs  export_recover_tests.rs  multisig_tests.rs  signing_tests.rs  utils_tests.rs  wallet_generate.rs  wallet_tests.rs
